--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -57,24 +57,10 @@
 <div class="codingSubSectionName">Graph Theory</div>
 <ul>
 	 <li> <a href="solution/graphknowledge.html">图的基本表示法</a></li>
-	 <li><a style="color:red" ; href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，必背模板！)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
-	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find：无向图分类找环</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
-	 <li style="color:red">2D Array DFS专题 用处： 1.求岛的个数， 2求面积， 3求坐标，4求周长， 5给岛染色 ）</li>
-	 <li><a href="solution/numberOfIslands.html">Number of islands(Template!)</a> <a href=https://leetcode.com/problems/number-of-islands/description/>Q</a></li>
-	 <li><a href="solution/maxAreaOfIslands.html">Max area of islands</a> <a href=https://leetcode.com/problems/max-area-of-island/description/>Q</a></li>
-	 <li><a href="solution/floodFill.html">flood fill</a> <a href=https://leetcode.com/problems/flood-fill/description/>Q</a></li>
-	 <li><a href="solution/SurroundedRegions.html">surrounded Area</a> <a href=http://www.lintcode.com/en/problem/surrounded-regions/>Q</a></li>
-	 <li><a style="color:red" ; href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图有层次的遍历找环)</a></li>
-   <li><a href="solution/topologicalSorting.html">Topological Sorting</a>  <a href=https://www.lintcode.com/problem/topological-sorting/description>Q</a></li>
-
-	 <li><a href="solution/courseschedule.html">course schedule(Topological sorting</a> <a href="http://www.lintcode.com/en/problem/course-schedule/">Q</a>  </li>
-	 <li><a href="solution/coursescheduleii.html">course schedule II</a> <a href="http://www.lintcode.com/en/problem/course-schedule-ii/">Q</a>  </li>
-	 <li><a href="solution/AlienDictionary.html">Alien dictionary(Topological sorting with duplicate edges)</a> <a href=https://leetcode.com/problems/alien-dictionary/description/>Q</a></li>
-	 <li><a href="solution/EvaluateDivision.html">Evaluate Division(有向图里能否从一点到另一点，返回权重，DFS)</a> <a href="https://leetcode.com/problems/evaluate-division/description/">Q</a>  </li>
-     <li ><a style="color:red" ; href="solution/reconstructitinerray.html">Reconstruct Itinerary(有向图DFS搜索某种路径： 断边法)</a> <a href="https://leetcode.com/problems/reconstruct-itinerary/description/">Q</a>  </li>
-	 <li ><a href="solution/FindEventualSafeStates.html">Find Eventual safe sttes(有向图DFS找环：暴力搜索法， 染色法)</a> <a href=https://leetcode.com/problems/find-eventual-safe-states/description/>Q</a>  </li>
-	 <li ><a href="solution/NetworkDelayTime.html">NetWork Delay(有向图DFS, 求全局权重最优)</a> <a href=https://leetcode.com/problems/network-delay-time/description/>Q</a>  </li>
-     <li ><a style="color:red" ; href="solution/MinimalHeightTree.html">Tree Graph（树图剪枝法）</a> <a href="https://leetcode.com/problems/minimum-height-trees/description/">Q</a>  </li>
+	 <li><a style="color:red"  href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，必背模板！)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
+	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find：无向图分类(或者用BFS,DFS做)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
+	 <li><a style="color:red"  href="solution/2DDFSSummary.html">2D Array棋盘类DFS专题 用处： 1.求岛的个数， 2求面积， 3求坐标，4求周长， 5给岛染色 ）</a></li>
+	 <li><a style="color:red"  href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图有层次的遍历找环)</a></li>
 </ul>
 
 <div class="codingSubSectionName">Subset search in Binary Tree</div>
