--- a/html/solution/2DDFSSummary.html
+++ b/html/solution/2DDFSSummary.html
@@ -9,10 +9,10 @@
 
 <body>
 
-<li><a href="numberOfIslands.html">Number of islands(Template)</a> <a href=https://leetcode.com/problems/number-of-islands/description/>Q</a></li>
+<li><a href="numberOfIslands.html">Number of islands</a> <a href=https://leetcode.com/problems/number-of-islands/description/>Q</a></li>
 <li><a href="maxAreaOfIslands.html">Max area of islands</a> <a href=https://leetcode.com/problems/max-area-of-island/description/>Q</a></li>
 <li><a href="floodFill.html">flood fill</a> <a href=https://leetcode.com/problems/flood-fill/description/>Q</a></li>
-<li><a href="SurroundedRegions.html">surrounded Area</a> <a href=http://www.lintcode.com/en/problem/surrounded-regions/>Q</a></li>
+<li><a href="SurroundedRegions.html">surrounded Area(撞墙)</a> <a href=http://www.lintcode.com/en/problem/surrounded-regions/>Q</a></li>
 
 
 
@@ -23,7 +23,7 @@
 void dfs( start, matrix)
 {
 
-  1. 递归的三个结束条件判断 （ 一般是越界，或者撞墙， 或者访问过）
+  1. 递归的三个结束条件判断 （ 过界，撞墙，访问过）
 
 	2. 递归达到某种要求（走到某点， 返回 ）
 
