--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -58,9 +58,9 @@
 <ul>
 	 <li> <a href="solution/graphknowledge.html">图的基本表示法</a></li>
 	 <li><a style="color:red"  href="solution/RouteBetweenTwoNodesinGraph.html">Route between two nodes(图里能否从一点到另一点，必背模板！)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
-	 <li><a style="color:red"  href="solution/UnionFind.html">Union Find：无向图分类(或者用BFS,DFS做)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
-	 <li><a style="color:red"  href="solution/2DDFSSummary.html">2D Array棋盘类DFS专题 用处： 1.求岛的个数， 2求面积， 3求坐标，4求周长， 5给岛染色 ）</a></li>
-	 <li><a style="color:red"  href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图有层次的遍历找环)</a></li>
+	 <li><a href="solution/UnionFind.html">Union Find：无向图分类(或者用BFS,DFS做)</a> <a href="http://www.lintcode.com/en/problem/route-between-two-nodes-in-graph/">Q</a>  </li>
+	 <li><a href="solution/2DDFSSummary.html">2D Array棋盘类DFS专题 用处： 1.求岛的个数， 2求面积， 3求坐标，4求周长， 5给岛染色 ）</a></li>
+	 <li><a href="solution/topologicalSortingTutorial.html">Topological Sorting tutorial(有向图有层次的遍历找环)</a></li>
 </ul>
 
 <div class="codingSubSectionName">Subset search in Binary Tree</div>
