--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -222,8 +222,7 @@
 	 <li><a href="solution/implementStackbyTwoQueues.html">Implement a stack by two queues</a> <a href="http://www.lintcode.com/en/problem/implement-stack-by-two-queues/">Q</a>  </li>
    <li><a href="solution/myCalendarI.html">My Calendar I(TreeMap)</a> <a href=https://leetcode.com/problems/my-calendar-i/description/>Q</a>  </li>
    <li><a href="solution/myCalendarII.html">My Calendar I(TreeMap)</a> <a href=https://leetcode.com/problems/my-calendar-ii/description/>Q</a>  </li>
-   <li><a style="color:red"; href="solution/Trie.html">Trie<a href=https://leetcode.com/problems/implement-trie-prefix-tree/description/>Q</a>  </li>
-   <li><a  href="solution/AddandSearchWordDatastructuredesign">Trie<a href=https://leetcode.com/problems/add-and-search-word-data-structure-design/description/>Q</a>  </li>
+   <li><a href="solution/Trie.html">Trie<a href=https://leetcode.com/problems/implement-trie-prefix-tree/description/>Q</a>  </li>
    <li><a  href="solution/IntertInterval">Insert Interval<a href=https://leetcode.com/problems/insert-interval/discuss/21600/Short-java-code>Q</a>  </li>
 
 </ul>
