--- a/html/solution/Trie.html
+++ b/html/solution/Trie.html
@@ -6,8 +6,9 @@
 
 
 <body>
-
-  <li><a href="https://leetcode.com/problems/redundant-connection/description/">Stream of Characters(把单词倒序建Trie, 方便从最后一个字母开始查找)</a>  </li>
+  <li><a href=https://leetcode.com/problems/word-search-ii/>Stream of Characters(把单词倒序建Trie, 方便从最后一个字母开始查找)</a>  </li>
+  <li><a href=https://leetcode.com/problems/design-search-autocomplete-system//>Auto Complete(Trie node每个节点包含所有过它的单词)</a>  </li>
+  <li><a href=https://leetcode.com/problems/stream-of-characters/>Word search II(DFS + trie)</a>  </li>
 
 
 
