--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -275,8 +275,10 @@
 	 <li><a href="solution/JumpGameII.html">Jump Game II</a> <a href=http://www.lintcode.com/en/problem/jump-game-ii/>Q</a>  </li>
 	 <li><a href="solution/perfectSquare_DP.html">perfect Square (n^2) 对比DFS(2^n)</a> <a href=https://leetcode.com/problems/perfect-squares/description/>Q</a>  </li>
 	 <li><a href="solution/workBreak_DP.html">Word break (DP n^2) 对比用 DFS (n * 2^n)</a> <a href=https://leetcode.com/problems/word-break/description/> Q</a></li>
+</ul>
 
-
+<ul>
+	 <li><a href="solution/javaTip.html">Java Debug Summary</a> </li>
 </ul>
 
 
