--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -279,6 +279,8 @@
 
 <ul>
 	 <li><a href="solution/javaTip.html">Java Debug Summary</a> </li>
+   <li><a href="solution/mba.html">MBA</a> </li>
+
 </ul>
 
 
