--- a/html/solution/mba.html
+++ b/html/solution/mba.html
@@ -1,3 +1,5 @@
+
+<pre><code>
 UW MBA program:
 1. Time
    a. 3 years/70 credites
@@ -20,3 +22,4 @@ UW MBA program:
 6. From my standpoint:
    1. Too much time commitment to do 3 yrs MBA
    2. I can try to transfer to PM role without MBA inside MS, better transition with Management and half tech.
+ </code></pre>
