--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -242,8 +242,8 @@
 
 
 <ul>
-	 <li><a href="solution/longestSubStrwithoutduplicate.html">longest substring without duplicate(最长无重复子串, 双指针异步）</a> <a href=“http://www.lintcode.com/en/problem/longest-substring-without-repeating-characters/#”>Q</a>  </li>
-	 <li><a href="solution/longestsubStringAtmostKdistinctchars.html">longest substring with at most k distinct substring(最长连续的k个不同字符子串， 双指针+HashMap）</a> <a href="https://leetcode.com/problems/longest-substring-with-at-most-two-distinct-characters/">Q</a>  </li>
+	 <li><a href="solution/longestSubStrwithoutduplicate.html">longest substring without duplicate(最长无重复子串, 双指针异步）</a> <a href=https://leetcode.com/problems/longest-substring-without-repeating-characters/>Q</a>  </li>
+	 <li><a href="solution/longestsubStringAtmostKdistinctchars.html">longest substring with at most k distinct substring(最长连续的k个不同字符子串， 双指针+HashMap）</a> <a href=https://leetcode.com/problems/longest-substring-with-at-most-k-distinct-characters/>Q</a>  </li>
 	 <li><a href="solution/MinimalWindowSubstring.html">Minimal Window Substring(双指针异步)</a> <a href="https://leetcode.com/problems/longest-palindromic-substring/description/">Q</a>  </li>
 
    <li><a href="solution/StringCompression.html">String compression(字符串压缩，读写指针同步）</a> <a href=https://leetcode.com/problems/string-compression/submissions/1>Q</a>  </li>
@@ -298,6 +298,8 @@
 <div class="codingSectionName">System Design</div>
 <ul>
   <li><a href="solution/Design_Chat_System.html">Design Chatting System</a></li>
+  <li><a href="solution/Design_MemCached.html">Design Memcached</a></li>
+
 </ul>
 
 <div class="codingSectionName">Interview</div>
