--- a/html/solution/wordBreak.html
+++ b/html/solution/wordBreak.html
@@ -48,7 +48,7 @@ DFS subset 模版
 <div class="comment">
 Time complexity :      n*(2^n)
 慢过不了AC,但是解法是正确的。
-
+此题目用DP解答，时间复杂度能减低到 n^2, 解法建后面DP专栏
 
 </div>
 
