--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -292,6 +292,9 @@
 
 </ul>
 
+<div class="codingSectionName">Bitwise operator/div>
+  <li><a href="solution/bitwiseOperator.html">BitWise Operator</a></li>
+
 
 </body>
 
