--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -292,7 +292,7 @@
 
 </ul>
 
-<div class="codingSectionName">Bitwise operator/div>
+<div class="codingSectionName">Bitwise operator</div>
   <li><a href="solution/bitwiseOperator.html">BitWise Operator</a></li>
 
 
