--- a/html/solution/subset.html
+++ b/html/solution/subset.html
@@ -9,22 +9,22 @@
 <body>
 <pre><code>
 
-
+Solution 1:
 class Solution {
 
     public ArrayList<ArrayList<Integer>> subsets(int[] nums) {
         // write your code here
         Arrays.sort(nums);
-        
-        ArrayList&lt;ArrayList<Integer>> results = new ArrayList<>();
-        ArrayList<Integer> result = new ArrayList<>();
+
+        ArrayList&lt;ArrayList<Integer>> results = new ArrayList&lt;>();
+        ArrayList<Integer> result = new ArrayList&lt;>();
         dfs(results, result, nums, 0);
         return results;
     }
-	
+
     private void dfs(ArrayList<ArrayList<Integer>> results, ArrayList<Integer> result, int[] nums, int level){
         results.add(new ArrayList<Integer>(result));
-        
+
         for( int i=level; i &lt; nums.length; i++){
             result.add(nums[i]);
             dfs( results, result, nums,i+1 );
@@ -32,6 +32,32 @@ class Solution {
         }
     }
 }
+
+Solution 2: DFS里不带for loop的写法。一个DFS里包含两个不同的DFS功能
+class Solution {
+    public List<List<Integer>> subsets(int[] nums) {
+
+       List<List<Integer>> results = new ArrayList&lt;>();
+       dfs(results, new ArrayList<Integer>(), nums, 0);
+
+       return results;
+    }
+
+    void dfs(List<List<Integer>> results, List<Integer> result, int[] nums, int pos){
+
+          if ( pos == nums.length){
+              results.add(new ArrayList<Integer>(result));
+              return;
+          }
+
+           result.add(nums[pos]);
+           dfs(results, result, nums, pos + 1);
+           result.remove(result.size()-1);
+           dfs(results, result, nums, pos + 1);
+    }
+}
+
+
 </code>
 </pre>
 
