--- a/html/solution/bitwiseOperator.html
+++ b/html/solution/bitwiseOperator.html
@@ -15,8 +15,7 @@ a^0 = a
 a^b^c = a^c^b  (交换律)
 
 2.~ logic not operator:
-a   1011
-~a  0100
+32个bit, 每一bit都取反
 
 a &amp; ~a = 0
 
@@ -33,21 +32,31 @@ int a=2
 
 
 5. Java build in function
- Helper function
  String Integer.toBinaryString(int n);
+ int    Integer.bitCount(int n);
 
 6. Skill
  2^n = 1<< n
 
  A &amp; 0 = 0
 
-A &amp; precedence is lower than ==
+&amp; precedence is lower than ==
 
 n &amp; bitmast == 1,    == takes precedence first. need to change to  (n &amp; bitmast) == 1
 
-8 how many 1 are there in a bit
 
-右移数字
+
+7. >> 带符号右移，原来是0，左边加0. 原来是1，左边加1
+int a= 10  （1010）     a>>2 0010
+int a=-2    11111111 11111111  11111111 11111110
+a>>8        11111111 11111111  11111111 11111111
+
+>>>无符号右移
+a=-2, a>>>8 00000000 11111111  11111111 11111111
+
+常用技巧1: 判断最后一位的值, n&amp;1, 右移。 常见题目： （求1的个数，两个integer bitwise comparision）
+Number of 1 Bits
+
 while( n > 0){
   if (( n &amp; 1) == 1){
     count++;
@@ -56,29 +65,36 @@ while( n > 0){
 }
 return count;
 
-左移Bitmask
-int bitmask =1;
-for( int i=0; i&lt;32; i++){
-  if (( n &amp; bitmask) != 0){
-    count++;
+1178. Number of Valid Words for Each Puzzle
+for（int i=31; i>=0; i--){
+  int LastBit1 = (n1>>i)&amp;1;
+  int lastBit2 = (n2>>i)&amp;1;
+  if ( business logic){
+      return true;
   }
-  bitmask = bitmask<<1;
+  return false;
 }
-return count;
+
+
+1178. Number of Valid Words for Each Puzzle
+常用技巧2: 构造数  count =0  count = (1&lt;&lt;i) | count
 
 无重复字母的字符串用bitmask表示方法
-int bits = 0;
+int bitmask = 0;
 for(char c : s.toCharArray()){
     int shift = c - 'a';
-    bits = (1<<shift) | bits;
+    bitmask  = (1&lt;&lt;shift) | bitmask;
+}
+return bitmaskt
+
+
+
+常用技巧3:  int bitmask = 0;,  bitmask = bitmask^c;
+int bitmask =0;
+for( char c : string){
+  bitmask = bitmask^c
 }
 
-7. 常用技巧
-取最后一位：  int lastDigit = n&1;
-设置位置：
-int count = 0;
-    for int i=0; i<n; i++
-    count = (1<<i) | count
 
 </code></pre>
 
