--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -296,6 +296,14 @@
   <li><a href="solution/bitwiseOperator.html">BitWise Operator</a></li>
 
 
+  <div class="codingSectionName">Greedy</div>
+  <ul>
+  	 <li><<a href=https://leetcode.com/problems/assign-cookies/>Assign Cookies</a>  </li>
+  	 <li><a href=https://leetcode.com/problems/employee-free-time/>Employee Free Time</a>  </li>
+  	 <li><a href=https://leetcode.com/problems/lemonade-change/>Lemonade Change</a>  </li>
+     <li><a href=https://leetcode.com/problems/distribute-candies-to-people/>Distribute candies to people</a>  </li>
+  </ul>
+
 </body>
 
 <div class="codingSectionName">System Design</div>
