--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -298,11 +298,24 @@
 
   <div class="codingSectionName">Greedy</div>
   <ul>
-  	 <li><<a href=https://leetcode.com/problems/assign-cookies/>Assign Cookies</a>  </li>
+  	 <li><a href=https://leetcode.com/problems/assign-cookies/>Assign Cookies</a>  </li>
   	 <li><a href=https://leetcode.com/problems/employee-free-time/>Employee Free Time</a>  </li>
   	 <li><a href=https://leetcode.com/problems/lemonade-change/>Lemonade Change</a>  </li>
      <li><a href=https://leetcode.com/problems/distribute-candies-to-people/>Distribute candies to people</a>  </li>
   </ul>
+
+
+<div class="codingSectionName">Linear Scan(Hard)</div>
+<ul>
+   <li><a href=https://leetcode.com/problems/daily-temperatures/>739. Daily Temperatures(stack)</a>  </li>
+   <li><a href=https://leetcode.com/problems/maximum-subarray-sum-with-one-deletion/>1186. Maximum Subarray Sum with One Deletion
+(Maximum subarray algo)</a>  </li>
+   <li><a href=https://leetcode.com/problems/k-concatenation-maximum-sum/>1191. K-Concatenation Maximum Sum
+(Maximum subarray algo modification)</a>  </li>
+   <li><a href=https://leetcode.com/problems/longest-arithmetic-subsequence-of-given-difference/submissions/>1218. Longest Arithmetic Subsequence of Given Difference(scan and record)
+</a>  </li>
+</ul>
+
 
 </body>
 
