--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -317,6 +317,20 @@
 </ul>
 
 
+<div class="codingSectionName">Linear Scan(Hard)</div>
+<a>Stack->counter优化</a>
+<a> 可以写出最直接的解法，O(n)greedy 写法面试很难直接想到</a>
+<ul>
+   <li><a href=https://leetcode.com/problems/valid-parentheses/>Valid Parentheses</a>  </li>
+   <li><a href=https://leetcode.com/problems/valid-parenthesis-string/>Valid Parenthesis String</a>  </li>
+   <li><a href=https://leetcode.com/problems/score-of-parentheses/>Score of Parentheses</a>  </li>
+   <li><a href=https://leetcode.com/problems/minimum-add-to-make-parentheses-valid/>Minimum Add to Make Parentheses Valid（返回个数记录count不需要stack)</a></li>
+   <li><a href=https://leetcode.com/problems/remove-outermost-parentheses/>Remove Outermost Parentheses</a></li>
+   <li><a href=https://leetcode.com/problems/minimum-add-to-make-parentheses-valid/>Minimum Add to Make Parentheses Valid</a></li>
+   <li><a href=https://leetcode.com/problems/reverse-substrings-between-each-pair-of-parentheses/>Reverse Substrings Between Each Pair of Parentheses</a></li>
+   <li><a href=https://leetcode.com/problems/minimum-remove-to-make-valid-parentheses/>Minimum Remove to Make Valid Parentheses(返回String用stack记录需要去掉的位置位置)</a></li>
+</ul>
+
 </body>
 
 <div class="codingSectionName">System Design</div>
