--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -72,6 +72,11 @@
    <li><a href="https://leetcode.com/problems/burst-balloons/">Burst Balloons</a>  </li>
 </ul>
 
+<div class="codingSubSectionName">DFS Mapping(DFS映射，带两个参数往下走，curPos + curDigit，容易优化成DFS + Memorization)</div>
+<ul>
+   <li><a href="solution/KnightDialer.html">Knight Dialer</a> <a href="https://leetcode.com/problems/knight-dialer/">Q</a></li>
+   <li> <a href="solution/letterCombination.html">Letter combination( Different element on each level)</a></li></ul>
+
 <div class="codingSubSectionName">Subset search in Binary Tree</div>
 
 <ul>
