--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -72,7 +72,7 @@
    <li><a href="https://leetcode.com/problems/burst-balloons/">Burst Balloons</a>  </li>
 </ul>
 
-<div class="codingSubSectionName">跳棋模型：给定步数 + 走法限制，求多少种走法)</div>
+<div class="codingSubSectionName">跳棋模型：给定步数 + 走法限制，求多少种走法 DFS 优化到 -> DFS + Memorization )</div>
 <ul>
    <li><a href="solution/KnightDialer.html">Knight Dialer</a> <a href="https://leetcode.com/problems/knight-dialer/">Q</a></li>
    <li><a href="solution/NumberofWaystoStayintheSamePlace.html">Number of Ways to stay in the same place</a> <a href="https://leetcode.com/problems/number-of-ways-to-stay-in-the-same-place-after-some-steps/">Q</a></li>
