--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -342,9 +342,14 @@
 
 <div class="codingSectionName">System Design</div>
 <ul>
+  <li><a href="solution/Design.html">Design Questions Compination</a></li>
   <li><a href="solution/Design_Chat_System.html">Design Chatting System</a></li>
   <li><a href="solution/Design_MemCached.html">Design Memcached</a></li>
+</ul>
 
+<div class="codingSectionName">TimeLine</div>
+<ul>
+  <li><a href="solution/Design.html">time.html</a></li>
 </ul>
 
 <div class="codingSectionName">Interview</div>
