--- a/html/codeLayout.html
+++ b/html/codeLayout.html
@@ -349,7 +349,7 @@
 
 <div class="codingSectionName">TimeLine</div>
 <ul>
-  <li><a href="solution/Design.html">time.html</a></li>
+  <li><a href="solution/time.html">Hours</a></li>
 </ul>
 
 <div class="codingSectionName">Interview</div>
