--- a/html/solution/Design.html
+++ b/html/solution/Design.html
@@ -9,12 +9,16 @@
 
 <body>
 <pre><code>
+online Design resources:
+1. https://www.educative.io/courses/grokking-the-system-design-interview/m2yDVZnQ8lG
+2. https://github.com/donnemartin/system-design-primer
+
 
 Facebook Design Questions:
 1. Design Memcached
 2. Design Uber
 3. Design news feed
-4. Design Chat System 
+4. Design Chat System
 
 
 </code></pre>
