--- a/html/solution/graphknowledge.html
+++ b/html/solution/graphknowledge.html
@@ -46,6 +46,8 @@ b. Adjacent list    ( 用顶点来表示图,最常见的一种表达方式）
    或者
    HashMap&lt;Integer, ArrayList&lt;Integer>> Graph;     这种方法自己建图最好
 
+   or
+   int[][] graph, row index代表顶点，对应的int[] 代表adjacent list
 
 
 c.   用边来表达图, 可以遍历转化成点图(Union Find特征，每条边的两个顶点依次Union)
