--- a/html/solution/numberOfDiceWithTargetValue.html
+++ b/html/solution/numberOfDiceWithTargetValue.html
@@ -94,7 +94,7 @@ class Solution {
 
 
                    初始化进入DFS              DFS递归进程     结束条件            题目
-DFS top down :      step = 0                  step+1        step == N        number of ways to stay in the same place
+DFS top down :      step = 0                  step+1        step == N        number of ways to stay in the same place, knight dialer
 DFS bottom up:      step = N                  step-1        step == 0        number of Dice with target value
 
 </code></pre>
