--- a/html/solution/time.html
+++ b/html/solution/time.html
@@ -8,7 +8,7 @@
 <pre><code>
       coding    design
 12/4    3        2      8-11 coding,      下午状态很差，眼睛都睁不开了(看了design), 晚上回去睡到9点开始看API design, 9-11, 12-1睡不着 breaking bad. 2:30还是睡不着 youtube video
-12/5    2.5             10:30-11 coding , 下午状态正常，2hours coding.
+12/5    2.5     1.5     10:30-11 coding , 下午状态正常，2hours coding.           晚上回去8点开始看API design   8-9:30
 
 </code></pre>
 </body>
